--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
@@ -29,14 +31,24 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.25",
+    "@storybook/addon-interactions": "^7.0.25",
+    "@storybook/addon-links": "^7.0.25",
+    "@storybook/addon-styling": "^1.3.2",
+    "@storybook/blocks": "^7.0.25",
+    "@storybook/nextjs": "^7.0.25",
+    "@storybook/react": "^7.0.25",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/babel__core": "^7.20.1",
+    "eslint-plugin-storybook": "^0.6.12",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-extended": "^4.0.0"
+    "jest-extended": "^4.0.0",
+    "storybook": "^7.0.25"
   }
 }
