--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
+    "next": "14.2.3",
     "postcss": "8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.8.0",
     "swiper": "^9.2.4",
     "swr": "^2.1.5",
@@ -35,6 +34,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/babel__core": "^7.20.1",
+    "eslint-config-next": "^14.2.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-extended": "^4.0.0"
